// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TeamGroupsManageModal should hide confirm modal when team changes 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`components/TeamGroupsManageModal should match snapshot 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`components/TeamGroupsManageModal should match snapshot when onClickRemoveGroup is called 1`] = `
<Fragment>
  <ListModal
    loadItems={[Function]}
    onHide={[Function]}
    renderRow={[Function]}
    show={false}
    titleBarButtonOnClick={[Function]}
  />
  <ConfirmModal
    confirmButtonClass="btn btn-primary"
    confirmButtonText=""
    message=""
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={true}
    title=""
  />
</Fragment>
`;

exports[`components/TeamGroupsManageModal should render group row with correct title based on scheme_admin 1`] = `
<div
  className="more-modal__row"
>
  <img
    alt="group picture"
    className="more-modal__image"
    height="32"
    src=""
    width="32"
  />
  <div
    className="more-modal__details"
  >
    <div
      className="more-modal__name"
    >
      Group
       
      <Nbsp />
       
      -
       
      <Nbsp />
      <span
        className="more-modal__name_count"
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="{num, number} {num, plural, one {member} other {members}}"
          id="numMembers"
          values={
            Object {
              "num": undefined,
            }
          }
        />
      </span>
    </div>
  </div>
  <div
    className="more-modal__actions"
  >
    <MenuWrapper
      animationComponent={[Function]}
      className=""
    >
      <button
        aria-expanded="true"
        className="dropdown-toggle theme color--link style--none"
        id="teamGroupsDropdown_Group"
        type="button"
      >
        <span>
          Team Admins
           
        </span>
        <DropdownIcon />
      </button>
      <Menu
        ariaLabel="Change the role of a team member"
        openLeft={true}
      >
        <MenuItemAction
          onClick={[Function]}
          show={false}
          text="Make Team Admins"
        />
        <MenuItemAction
          onClick={[Function]}
          show={true}
          text="Make Team Members"
        />
        <MenuItemAction
          onClick={[Function]}
          show={true}
          text="Remove Group"
        />
      </Menu>
    </MenuWrapper>
  </div>
</div>
`;

exports[`components/TeamGroupsManageModal should render group row with correct title based on scheme_admin 2`] = `
<div
  className="more-modal__row"
>
  <img
    alt="group picture"
    className="more-modal__image"
    height="32"
    src=""
    width="32"
  />
  <div
    className="more-modal__details"
  >
    <div
      className="more-modal__name"
    >
      Group
       
      <Nbsp />
       
      -
       
      <Nbsp />
      <span
        className="more-modal__name_count"
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="{num, number} {num, plural, one {member} other {members}}"
          id="numMembers"
          values={
            Object {
              "num": undefined,
            }
          }
        />
      </span>
    </div>
  </div>
  <div
    className="more-modal__actions"
  >
    <MenuWrapper
      animationComponent={[Function]}
      className=""
    >
      <button
        aria-expanded="true"
        className="dropdown-toggle theme color--link style--none"
        id="teamGroupsDropdown_Group"
        type="button"
      >
        <span>
          Team Members
           
        </span>
        <DropdownIcon />
      </button>
      <Menu
        ariaLabel="Change the role of a team member"
        openLeft={true}
      >
        <MenuItemAction
          onClick={[Function]}
          show={true}
          text="Make Team Admins"
        />
        <MenuItemAction
          onClick={[Function]}
          show={false}
          text="Make Team Members"
        />
        <MenuItemAction
          onClick={[Function]}
          show={true}
          text="Remove Group"
        />
      </Menu>
    </MenuWrapper>
  </div>
</div>
`;
